<resources>
    <string name="app_name">Courier Management System</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courier">Courier</string>
    <string name="management_system">Management System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ops_i_don_t_have_an_account_yet">ops…I Don\'t Have an Account yet</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="loading">Loading...</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAeZRzC7rCyNFLxDzqhfaZvbWybyQmvRIg</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="first_name">First Name</string>
    <string name="back_name">Back Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tanggal_bulan_tahun">Tanggal/Bulan/Tahun</string>
    <string name="faq">FAQ</string>
    <string name="you_have_account">You Have Account ?</string>
    <string name="tugas">Tugas</string>
    <string name="upah">Upah</string>
    <string name="riwayat">Riwayat</string>
    <string name="reimburse">Reimburse</string>
    <string name="ambil_tugas_anda">Ambil Tugas Anda</string>
    <string name="dummy_name">RIZKIA FEBRI H</string>
    <string name="dummy_date">10/01/21</string>
    <string name="dummy_street">Jl. Juanda 14, Cluster PK 17.8</string>
    <string name="to_checklist">to checklist</string>
    <string name="riwayat_pembayaran_anda">Riwayat Pembayaran Anda</string>
    <string name="a_ke_b">A ke B</string>
    <string name="dummy_price">Rp 0</string>
    <string name="dummy_distance">30 km</string>
    <string name="b_ke_c">B ke C</string>
    <string name="reimburse_1">Reimburse 1</string>
    <string name="tol">Tol</string>
    <string name="reimburse_2">Reimburse 2</string>
    <string name="bensin">Bensin</string>
    <string name="seluruh_aktivitas_anda">Seluruh Aktivitas Anda</string>
    <string name="pengeluaran_pribadi_anda">Pengeluaran Pribadi Anda</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="waktu">Waktu :</string>
    <string name="penerima">Penerima :</string>
    <string name="kirim">Kirim</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="jumlah_tugas">Jumlah Tugas :</string>
    <string name="_0">0</string>
    <string name="jumlah_jarak">Jumlah Jarak :</string>
    <string name="_0_km">0 KM</string>
    <string name="estimasi_upah">Estimasi Upah :</string>
    <string name="smk_idn_boarding_school">Lokasi</string>
    <string name="chat">Chat</string>
    <string name="foto_bukti_penerima">Foto Bukti Penerima</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="selesai">Selesai</string>
    <string name="proses">Proses</string>
    <string name="batalkan">Batalkan</string>
    <string name="tanggal">Tanggal :</string>
    <string name="des_dummy">Deskripsi berasal dari verba describe dan bahasa latin describere yang artinya memaparkan, menguraikan atau melukiskan. Paragraf deskripsi adalah paragraf yang memiliki tujuan memberikan kesan atau impresi kepada para pembaca terhadap objek, peristiwa, gagasan, tempat yang ingin disampaikan penulis secara otentik.</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip">Zip</string>
    <string name="country">Country</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="get_orders">Ambil Order</string>
    <string name="done">Selesai</string>

    <string-array name="role">
        <item>Client</item>
        <item>Courier</item>
    </string-array>

</resources>