<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dashboard_1"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_tugas"
        android:icon="@drawable/job_offer_1"
        android:title="@string/tugas" />

    <item
        android:id="@+id/navigation_upah"
        android:icon="@drawable/bank_1"
        android:title="@string/upah" />

    <item
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/clock_1"
        android:title="@string/riwayat" />

    <item
        android:id="@+id/navigation_reimburse"
        android:icon="@drawable/notes_1"
        android:title="@string/reimburse" />

<!--    <item-->
<!--        android:id="@+id/navigation_profile"-->
<!--        android:icon="@drawable/ic_baseline_person_24"-->
<!--        android:title="@string/profile"/>-->

</menu>