<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courier_navigation"
    app:startDestination="@id/courierDashboardFragment">

    <fragment
        android:id="@+id/courierDashboardFragment"
        android:name="id.cikup.couriermanagementsystem.ui.courier.dashboard.CourierDashboardFragment"
        android:label="CourierDashboardFragment" >
        <action
            android:id="@+id/action_courierDashboardFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
    </fragment>


    <fragment
        android:id="@+id/navigation_tugas"
        android:name="id.cikup.couriermanagementsystem.ui.tugas.TugasFragment"
        android:label="@string/tugas"
        tools:layout="@layout/fragment_tugas" >
        <action
            android:id="@+id/action_navigation_tugas_to_courierDashboardFragment"
            app:destination="@id/courierDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upah"
        android:name="id.cikup.couriermanagementsystem.ui.upah.UpahFragment"
        android:label="@string/upah"
        tools:layout="@layout/fragment_upah" />

    <activity
        android:id="@+id/mainActivity"
        android:name="id.cikup.couriermanagementsystem.ui.main.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="id.cikup.couriermanagementsystem.ui.riwayat.RiwayatFragment"
        android:label="@string/riwayat"
        tools:layout="@layout/fragment_riwayat" />
    <fragment
        android:id="@+id/navigation_reimburse"
        android:name="id.cikup.couriermanagementsystem.ui.reimburse.ReimburseFragment"
        android:label="@string/reimburse"
        tools:layout="@layout/fragment_reimburse" />
</navigation>