<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.login.LoginFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/courier"
        android:textSize="@dimen/_30ssp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/management_system"
        android:textSize="@dimen/_25ssp"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/emailLoginFragmentEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edt"
        android:paddingStart="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:paddingLeft="@dimen/_10sdp" />

    <EditText
        android:id="@+id/passwordLoginFragmentEDT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/custom_edt"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/emailLoginFragmentEDT"
        app:layout_constraintStart_toStartOf="@+id/emailLoginFragmentEDT"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginFragmentEDT"
        android:paddingLeft="@dimen/_10sdp" />

    <Button
        android:id="@+id/loginFragmentBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginFragmentEDT"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginFragmentEDT"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginFragmentEDT" />

    <Button
        android:id="@+id/signupLoginFragmentBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/custom_btn"
        android:text="@string/ops_i_don_t_have_an_account_yet"
        app:layout_constraintEnd_toEndOf="@+id/loginFragmentBTN"
        app:layout_constraintStart_toStartOf="@+id/loginFragmentBTN"
        app:layout_constraintTop_toBottomOf="@+id/loginFragmentBTN" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarHolderLoginCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loginPB"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelProgressLoginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/loading"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPB" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>