<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dateUpdahItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_date"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateUpdahItemView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/streetNameItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/a_ke_b"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceAtoBUpahItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/dummy_price"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/streetNameItemViewTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/streetNameItemViewTV" />

            <TextView
                android:id="@+id/distanceAtoBUpahItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/dummy_distance"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/streetNameItemViewTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/streetNameItemViewTV" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/distanceAtoBUpahItemViewTV"
                app:layout_constraintStart_toStartOf="@+id/priceAtoBUpahItemViewTV"
                app:layout_constraintTop_toBottomOf="@+id/streetNameItemViewTV" />

            <TextView
                android:id="@+id/bToCTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/b_ke_c"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/priceBtoCUpahItemView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_price"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/bToCTV"
                app:layout_constraintStart_toStartOf="@+id/priceAtoBUpahItemViewTV"
                app:layout_constraintTop_toTopOf="@+id/bToCTV" />

            <TextView
                android:id="@+id/distanceBtoCUpahItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_distance"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/bToCTV"
                app:layout_constraintEnd_toEndOf="@+id/distanceAtoBUpahItemViewTV"
                app:layout_constraintTop_toTopOf="@+id/bToCTV" />

            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/distanceBtoCUpahItemViewTV"
                app:layout_constraintStart_toStartOf="@+id/priceBtoCUpahItemView"
                app:layout_constraintTop_toBottomOf="@+id/bToCTV" />

            <TextView
                android:id="@+id/reimburse1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/reimburse_1"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/priceReimburse1UpahItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_price"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/priceBtoCUpahItemView"
                app:layout_constraintTop_toTopOf="@+id/reimburse1TV" />

            <TextView
                android:id="@+id/tolReimburse1UpahItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tol"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/distanceBtoCUpahItemViewTV"
                app:layout_constraintTop_toTopOf="@+id/reimburse1TV" />

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tolReimburse1UpahItemViewTV"
                app:layout_constraintStart_toStartOf="@+id/priceReimburse1UpahItemViewTV"
                app:layout_constraintTop_toBottomOf="@+id/reimburse1TV" />

            <TextView
                android:id="@+id/reimburse2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/reimburse_2"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <TextView
                android:id="@+id/priceReimburse2UpdahItemViewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_price"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/priceReimburse1UpahItemViewTV"
                app:layout_constraintTop_toTopOf="@+id/reimburse2TV" />

            <TextView
                android:id="@+id/bensinReimburse2UpahItemviewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bensin"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/tolReimburse1UpahItemViewTV"
                app:layout_constraintTop_toTopOf="@+id/reimburse2TV" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bensinReimburse2UpahItemviewTV"
                app:layout_constraintStart_toStartOf="@+id/priceReimburse2UpdahItemViewTV"
                app:layout_constraintTop_toBottomOf="@+id/reimburse2TV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>